@@ -5,6 +5,8 @@ AUX zsh-4.2.1-gentoo.diff 735 RMD160 c14de49d5f13101c9b40a0d1f0f9eacf8ce2efd0 SH
 AUX zsh-4.3.4-configure-changequote.patch 694 RMD160 9f56120b2f8cc7ca913518ed099167fba3bc0b7f SHA1 986a8b03bc49da157ced270321538a579a9b6ec0 SHA256 78047e66ce905a701464616d3e3cc2a3a9714ac88ad063b6330234c5ea61e9e6
 AUX zsh-4.3.4-mkmakemod.patch 489 RMD160 156f0e94594198d83861414d4f0618f9fccf99aa SHA1 528994f7bc6dcb6b5b85b46997d97472d7166bd5 SHA256 094540885617e97afd947fede7935b0d9c18e375ddd471b729f752c11a4d32d9
 AUX zsh-init.d-gentoo.diff 1389 RMD160 1c317d93058b05e1d89dd81b4ab746ef31b4c38a SHA1 eb91fb330c0df1e227ee541159c7ac2d2fe15e53 SHA256 a8dcd168ab909a2b80b2958e3fc3cc974bc6048c08499be16c7925c1723b212f
+DIST zsh-4.3.10-doc.tar.bz2 2690183 RMD160 b56fd30ac63e2d3f2479c7d390ced260cad604f7 SHA1 e67e10478aa69a9e9cc92986515d337efc30a2bf SHA256 f53d5c434fdb26fc79755279175514507eb1d11cf793ac57270d053ee61f37f9
+DIST zsh-4.3.10.tar.bz2 2735665 RMD160 fad1412b76d1388d825cb870681c21696fdfa273 SHA1 132f9ce411bf318abccbae9cdc2f8cc14f8be85b SHA256 63fdc0273eadbb42d164f38b0b79922c0b3df0e97084e746a318276d935a4f7c
 DIST zsh-4.3.4-doc.tar.bz2 2358063 RMD160 768ce8ca2860139428d27a0fedf5c0724967e444 SHA1 83d1a38112f305892393cb036058248ebbf6168e SHA256 e74289f99479328b8bcee9c47ae07038e54437e860fb5487da57cfc8d1836777
 DIST zsh-4.3.4-zshcalsys.tar.bz2 9346 RMD160 d26b370853419494725a73524ba81c754d63a201 SHA1 d93379f8dc81dcd63737519374e7d7d1ffb3cd87 SHA256 4225eb85ead732423405b567c879280780073a39fff3a05c6b6b13f29f0a382e
 DIST zsh-4.3.4.tar.bz2 2374851 RMD160 2fe0fcf6371d2072c3b7eeae0392c7ef3665457c SHA1 6bd905c4bf61bf3df5e5bb78f64be68366ad7517 SHA256 6fa0e22cb0da3a02c115425097002f2b4bb56e412db6c821ca111e088cbfdec6
@@ -15,9 +17,10 @@ DIST zsh-4.3.6.tar.bz2 2527972 RMD160 fedd72f427439e75b8488479a3d20e9d8d5be794 S
 DIST zsh-4.3.9-doc.tar.bz2 2570995 RMD160 c7080f41901bd4b6d0b8e9f9385fd57a9d73a383 SHA1 456a696de365066b32161d194de9c7643dbeb7a0 SHA256 15ae762a228c2b2d410cecdddca279e49dfa6cfff85aaf8fa55e74940b4e8165
 DIST zsh-4.3.9.tar.bz2 2659602 RMD160 2c88347fa357e3624f000721963749c6ccb4e129 SHA1 7c80e1ad6b311ee5877172a1a7e0161a9a60da70 SHA256 8fdd6d6c6dc3a061b0c9a1b26eb367d10c0d8094d4b8bd2613740fc40b4382ab
 DIST zsh-lovers_0.5.orig.tar.gz 499014 RMD160 505261d9e28554c838864421ec81b6665e55dfa1 SHA1 bc9b41dd5814f60b39d393ef68c4dc099da9016b SHA256 d945adab65fdf3ff322ed64c54739b2a1cec964544c5f438005ddad9c0c62bea
+EBUILD zsh-4.3.10.ebuild 5375 RMD160 05b3744f86ff084170098313d732f5ebab0be79a SHA1 5336bfcedd476597f454d9aee484999ad511b89a SHA256 a8b10175383f0e49a18a14d45c3c1f801f8e83f7904a07a6172f66672ef944f7
 EBUILD zsh-4.3.4-r1.ebuild 5291 RMD160 6b0ef9027686957e5519a5a35291a9ed9cb0a5ad SHA1 40abf2bd3fe7330475455a438c06b37e0ecd4f71 SHA256 887b6cb7dd60b851dc43346b39322335a536493b7c7f09c96398c1a8fcf320e2
 EBUILD zsh-4.3.5.ebuild 4393 RMD160 f9cdd1bac53dbae329413a62d4bdaed0b091be3a SHA1 611d138e11eab84aed04668df24d71c479eabc98 SHA256 d1358d4f61d114bcc09e292e7e5344cd73bf63889027c4a3a559ccbbedc6567e
 EBUILD zsh-4.3.6.ebuild 4853 RMD160 39efb8a92d358fcd3a2c019910252bceae68ef6e SHA1 236f3015eaf68c44597448abbd4db9dec55d3928 SHA256 b060db8386e61edae048a87b7c8f8003d9f7134e57761b9466bc55be6ff311dc
 EBUILD zsh-4.3.9.ebuild 5374 RMD160 8fd71a858d33e2d74061e9dcc012edbfec21913c SHA1 fdd2ad1d7a86130b35c159a9223cccc84aff1aee SHA256 ef023c7a94a7a747f797e81bdc0e581c4e900303bb976305d800742de9336e99
-MISC ChangeLog 21684 RMD160 da89f7b45dc624acb7855b2cf21ddd6663498df5 SHA1 c8f1ad13552d13ba8dc5eceb480ba3819be53f75 SHA256 f1fdd9219019cfc48b3e5e668a94e9bba7c4be1a3788946e74e69bad9f55d0ea
+MISC ChangeLog 21795 RMD160 c7151c3cef6f6ce3af6cec4e4bb479ddf4373d4d SHA1 d486bfd57b2f48e2f5f3a1d70f08f05a6cf2549e SHA256 a228c9d9008b0871555f4de9d19df2646ba5e6451f184fbd9ec11a7ef25f7f73
 MISC metadata.xml 553 RMD160 b4d3d1ca445d0c50f0372fb8af1e9fa2e4c303fb SHA1 8652a4d38b0858eff280576ca143ddc9b5db83c1 SHA256 e4bdebdc75f06d8cc998456bd2a1ec7300b6a08ca5fb28590841ad7071366cf4
