@@ -1,6 +1,11 @@
 # ChangeLog for app-shells/zsh
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh/ChangeLog,v 1.144 2009/05/07 13:26:39 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh/ChangeLog,v 1.145 2009/06/03 06:28:42 tove Exp $
+
+*zsh-4.3.10 (03 Jun 2009)
+
+  03 Jun 2009; Torsten Veller <tove@gentoo.org> +zsh-4.3.10.ebuild:
+  Version bump
 
   07 May 2009; Torsten Veller <tove@gentoo.org> zsh-4.3.9.ebuild:
   Don't build gdbm module if USE=-gdbm for a non-dynamic zsh (#268926)
